<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="20dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"
        android:background="#2f3e9e"
        android:textColor="@android:color/white"
        android:text="@string/add_category"
        android:id="@+id/category_header"
        android:contentDescription="@string/app_name" />
    <EditText
        android:id="@+id/category_username"
        android:inputType="textEmailAddress"
        android:layout_below="@+id/category_header"
        android:layout_width="match_parent"
        android:maxLines="1"
        android:singleLine="true"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:hint="@string/category_name" />
</RelativeLayout>