<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <TextView
        android:id="@+id/add_item_img_upload_box"
        android:layout_width="300dp"
        android:layout_height="200dp"
        android:text="@string/add_item_img_msg"
        android:gravity="center"
        android:textSize="20dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="@drawable/image_dropzone"
    />

    <ImageView
        android:id="@+id/add_item_img"
        android:layout_width="300dp"
        android:layout_height="150dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:visibility="invisible"
        />`

    <TextView
        android:id="@+id/add_item_real_price"
        android:layout_marginTop="@dimen/add_item_top_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/add_item_img_upload_box"
        android:text="@string/original_price"
        android:paddingLeft="@dimen/add_item_padding_sides"
        />

    <EditText
        android:id="@+id/add_item_real_price_txtbox"
        android:layout_below="@+id/add_item_real_price"
        android:inputType="numberDecimal"
        android:maxLines="1"
        android:singleLine="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="@dimen/add_item_padding_sides"
        android:layout_marginRight="@dimen/add_item_padding_sides"
        android:layout_marginTop="@dimen/add_item_top_margin_between_lbl_txt"
        />

    <TextView
        android:id="@+id/add_item_lbl_retail_price"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/retail_price"
        android:layout_width="match_parent"
        android:layout_below="@+id/add_item_real_price_txtbox"
        android:paddingLeft="@dimen/add_item_padding_sides"
        android:layout_height="wrap_content" />
    <EditText
        android:id="@+id/add_item_retail_price_txtbox"
        android:maxLines="1"
        android:singleLine="true"
        android:layout_below="@+id/add_item_lbl_retail_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:inputType="numberDecimal"
        android:layout_marginLeft="@dimen/add_item_padding_sides"
        android:layout_marginRight="@dimen/add_item_padding_sides"
        android:layout_marginTop="@dimen/add_item_top_margin_between_lbl_txt"
        />

    <TextView
        android:id="@+id/add_item_lbl_category"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/category_lbl"
        android:layout_width="match_parent"
        android:layout_below="@+id/add_item_retail_price_txtbox"
        android:paddingLeft="@dimen/add_item_padding_sides"
        android:layout_height="wrap_content" />

    <Spinner
        android:id="@+id/add_item_categories_dropdown"
        android:layout_below="@+id/add_item_lbl_category"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/add_item_padding_sides"
        android:layout_marginRight="@dimen/add_item_padding_sides"
        android:layout_marginTop="@dimen/add_item_top_margin"
        android:layout_weight="50"
        android:textSize="18dp"
        android:textAlignment="center"
        />

    <Button
        android:id="@+id/add_item_submit_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:textStyle="bold"
        android:textColor="@android:color/white"
        android:background="@color/colorPrimary"
        android:layout_below="@+id/add_item_categories_dropdown"
        android:layout_marginTop="@dimen/add_item_top_margin"
        android:layout_marginRight="@dimen/add_item_padding_sides"
        android:layout_marginLeft="@dimen/add_item_padding_sides"
        />

</RelativeLayout>